Removed unnecessary main-app folder. Added configuration to match good standards

--- a/app/src/styles/styles.scss
+++ b/app/src/styles/styles.scss
@@ -1,6 +1,6 @@
-@import './styles/partials/margin-padding';
-@import './styles/partials/font-size';
-@import './styles/app.theme';
+@import 'partials/margin-padding';
+@import 'partials/font-size';
+@import 'app.theme';
 
 @import "~mdi/css/materialdesignicons.min.css";
 
