Fixed up the node information

--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="!loading">
     <md-card>
       <md-card-title>Login</md-card-title>
-      <icon name="impart" size="xxl" class="impart-logo"></icon>
+      <i class="mdi mdi-login mdi-24px"></i>
     </md-card>
     <md-card>
       <button md-raised-button>
