Node and Angular are in a working state -- separate into branches

--- a/app/src/styles/app.theme.scss
+++ b/app/src/styles/app.theme.scss
@@ -1,5 +1,5 @@
 // Variables for entire app
-@import 'app.variables';
+@import "app.variables";
 
 // Include non-theme styles for core.
 @include mat-core();
