--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,22 @@
-<u-dh-navbar [brand]="brand" [topLinks]="topLinks" [bottomHeading]="bottomHeading" [bottomLinks]="bottomLinks">
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</u-dh-navbar>
+<udh-navbar>
+  <!-- Brand -->
+  <udh-icon-link icon="mdi mdi-menu">Brand Name</udh-icon-link>
+
+  <udh-navbar-icons>
+    <udh-icon-link icon="mdi mdi-account"></udh-icon-link>
+  </udh-navbar-icons>
+
+  <!-- Navigation -->
+  <udh-navigation side="left" closed="false">
+    <udh-link-group [divider]="false">
+      <udh-icon-link icon="mdi mdi-check" [routerLink]="['/uRoutine/routines']">uRoutine</udh-icon-link>
+    </udh-link-group>
+    <udh-link-group heading="Account">
+      <udh-icon-link icon="mdi mdi-login-variant" [routerLink]="['/login']">Login</udh-icon-link>
+      <udh-icon-link icon="mdi mdi-logout-variant" [routerLink]="['/logout']">Logout</udh-icon-link>
+    </udh-link-group>
+  </udh-navigation>
+
+  <!-- Body -->
+  <router-outlet></router-outlet>
+</udh-navbar>
