--- a/app/src/styles/app.variables.scss
+++ b/app/src/styles/app.variables.scss
@@ -1,7 +1,7 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
 $primary: mat-palette($mat-indigo, 700, 500, 900);
-$accent:  mat-palette($mat-cyan, 700, 500, 900);
+$accent:  mat-palette($mat-pink, 700, 300, 900);
 $warn: mat-palette($mat-red, 700, 500, 900);
 $success: mat-palette($mat-green);
 $danger: mat-palette($mat-red);
