Have the general Trello/Wekan format almost complete. Lists complete, general layout, but the cards are still needing to be completed.

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -10,7 +10,8 @@
   <udh-navigation side="left" closed="false">
     <udh-link-group [divider]="false">
       <udh-icon-link icon="mdi mdi-check" [routerLink]="['/uRoutine/routines']">uRoutine</udh-icon-link>
-    </udh-link-group>
+      <udh-icon-link icon="mdi mdi-calculator" [routerLink]="['/loan']">Loan Calculator</udh-icon-link>
+  </udh-link-group>
     <udh-link-group heading="Account">
       <udh-icon-link icon="mdi mdi-login-variant" [routerLink]="['/login']">Login</udh-icon-link>
       <udh-icon-link icon="mdi mdi-logout-variant" [routerLink]="['/logout']">Logout</udh-icon-link>
