--- a/app/src/styles/styles.scss
+++ b/app/src/styles/styles.scss
@@ -17,9 +17,49 @@ a {
   font-size: 36px;
 }
 
+i.mdi[md-list-icon] {
+  line-height: 24px;
+}
+
+button .mat-button-wrapper {
+  display: block;
+}
+
+button[title]:hover:after {
+  content: "";
+}
+
 body {
   margin: 0;
   height: 100vh;
   width: 100vw;
   font-family: Roboto;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 18px;
+}
+
+h6 {
+  font-size: 16px;
+}
+
+p {
+  font-size: 14px;
 }
