Added card functionality and card-details animation

--- a/app/src/app/routines/routines.component.html
+++ b/app/src/app/routines/routines.component.html
@@ -1,14 +1,16 @@
 <div class="routines-container">
   <udh-list-container>
     <udh-card></udh-card>
-    <udh-card-details></udh-card-details>
+    <udh-card title="Another Title"></udh-card>
+    <udh-card title="Another Title Here"></udh-card>
   </udh-list-container>
   <udh-list-container></udh-list-container>
-  <udh-list-container></udh-list-container>
-  <udh-list-container></udh-list-container>
-  <udh-list-container></udh-list-container>
-  <udh-list-container></udh-list-container>
-  <udh-list-container></udh-list-container>
+
+  <div class="add-list-button">
+    <button md-raised-button color="primary" mdTooltip="New Routine">
+      <i class="mdi mdi-plus"></i> Add New Routine
+    </button>
+  </div>
 </div>
 
 <!-- <md-card class="header">
