--- a/app/src/app/routines/routines.component.scss
+++ b/app/src/app/routines/routines.component.scss
@@ -9,19 +9,21 @@
   .routines-container {
     overflow-x: auto;
     overflow-y: hidden;
-    padding: 20px 0 20px 10px;
+    padding: 20px 50px 20px 10px;
     display: flex;
     flex: none;
     flex-direction: row;
 
 
     udh-list-container {
-      width: 480px;
-      flex: 1;
       overflow-y: auto;
       max-height: 100%;
       padding: 5px 20px 5px 5px;
       flex: none;
+    }
+
+    .add-list-button {
+      margin-top: 5px;
     }
   }
   // .header {
