--- a/app/src/app/udh-navbar/udh-navigation/udh-navigation.component.scss
+++ b/app/src/app/udh-navbar/udh-navigation/udh-navigation.component.scss
@@ -3,8 +3,8 @@
 
   /deep/ {
     > .mat-drawer {
-      box-shadow: none !important;
       background-color: transparent;
+      padding: 10px;
       width: 100%;
       overflow-x: hidden;
       overflow-y: hidden;
@@ -21,10 +21,6 @@
       &::-webkit-scrollbar-thumb {
         background: #bdbdbd;
       }
-    }
-
-    .mat-drawer-backdrop {
-      display: none;
     }
   }
 }
